k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-123
spec:
  selector:
    app: python-app-123
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
