k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-123
spec:
  ingressClassName: nginx
  rules:
  - host: "python-app-123-prod.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-123
            port:
              number: 8081
